# agentbeats-design2code

./: README.md  pyproject.toml
.github/workflows/: publish.yml  purple-agent-workflow.yml
scenarios/debate/: Dockerfile.adk-debate-judge  Dockerfile.debate-judge  Dockerfile.debater  debate_judge_common.py
scenarios/design2code/: Dockerfile.design2code-agent  Dockerfile.design2code-evaluator  design2code_agent.py  design2code_evaluator.py  scenario.toml
scenarios/design2code/evaluation/: __init__.py  visual_evaluator.py
scenarios/tau2/: Dockerfile.tau2-agent  Dockerfile.tau2-evaluator  README.md  scenario.toml  setup.sh  tau2_agent.py  tau2_evaluator.py
