[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentbeats-design2code"
version = "0.2.0"
description = "Agentbeats Design2Code Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[http-server]>=0.3.5",
    "litellm>=1.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "beautifulsoup4>=4.14.3",
    "colormath>=3.0.0",
    "datasets>=4.4.2",
    "numpy>=2.4.1",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=12.1.0",
    "playwright>=1.57.0",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "clip @ git+https://github.com/openai/CLIP.git",
]

[project.scripts]
agentbeats-run = "agentbeats.run_scenario:main"

[tool.uv]
package = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/agentbeats"]
